--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       </div>
       <div class="image-content" data-aos="fade-up" data-aos-duration="1000">
         <div class="images">
-          <img src="https://img.ws.mms.shopee.co.id/sg-11134201-22100-xlsr6arm5yiv89" alt="" width="100%" height="100%">
+          <img src="https://down-id.img.susercontent.com/file/b3daa2bcdb20de3f3930a2d8530d9274" alt="" width="100%"
+            height="100%">
         </div>
       </div>
     </div>
@@ -126,8 +127,8 @@
                 height="100%">
             </div>
             <h4>Black Sgry 88 KF5211</h4>
-            <p>Rp. 124.000,00</p>
-            <a href="#">Preview</a>
+            <p>Rp. 127.500,00</p>
+            <a href="https://shp.ee/0pocsaa" target="_blank">Preview</a>
           </div>
           <div class="card">
             <div class="images">
@@ -135,8 +136,8 @@
                 height="100%">
             </div>
             <h4>TRCOTTA 88 L3389</h4>
-            <p>Rp. 124.000,00</p>
-            <a href="#">Preview</a>
+            <p>Rp. 137.000,00</p>
+            <a href="https://shp.ee/26f6kat" target="_blank">Preview</a>
           </div>
           <div class="card">
             <div class="images">
@@ -144,8 +145,8 @@
                 height="100%">
             </div>
             <h4>White Mocca 88 L3338</h4>
-            <p>Rp. 124.000,00</p>
-            <a href="#">Preview</a>
+            <p>Rp. 127.500,00</p>
+            <a href="https://shp.ee/c6ni326" target="_blank">Preview</a>
           </div>
           <div class="card">
             <div class="images">
@@ -153,8 +154,8 @@
                 height="100%">
             </div>
             <h4>Black 88 P4015</h4>
-            <p>Rp. 124.000,00</p>
-            <a href="#">Preview</a>
+            <p>Rp. 136.000,00</p>
+            <a href="https://shp.ee/8ccoegu" target="_blank">Preview</a>
           </div>
         </div>
         <span id="hide">
@@ -165,8 +166,8 @@
                   width="100%" height="100%">
               </div>
               <h4>Black Cream 88 L3487</h4>
-              <p>Rp. 124.000,00</p>
-              <a href="#">Preview</a>
+              <p>Rp. 127.500,00</p>
+              <a href="https://shp.ee/di606dv" target="_blank">Preview</a>
             </div>
             <div class="card">
               <div class="images">
@@ -174,26 +175,26 @@
                   width="100%" height="100%">
               </div>
               <h4>BRW SBRW 88 L3465</h4>
-              <p>Rp. 124.000,00</p>
-              <a href="#">Preview</a>
+              <p>Rp. 152.000,00</p>
+              <a href="https://shp.ee/96x5fk1" target="_blank">Preview</a>
             </div>
             <div class="card">
               <div class="images">
-                <img src="https://img.ws.mms.shopee.co.id/sg-11134201-7qvff-liwgqwafnenrd8" alt="" width="100%"
-                  height="100%">
+                <img src="https://down-id.img.susercontent.com/file/0ad0ee269bcc042b7a9bff0d11eea6bb" alt=""
+                  width="100%" height="100%">
               </div>
-              <h4>Kemeja kami</h4>
-              <p>Rp. 125.000,00</p>
-              <a href="#">Preview</a>
+              <h4>Black White 88 L3331</h4>
+              <p>Rp. 150.000,00</p>
+              <a href="https://shp.ee/ofp0s21" target="_blank">Preview</a>
             </div>
             <div class="card">
               <div class="images">
-                <img src="https://img.ws.mms.shopee.co.id/sg-11134201-7qvff-liwgqwafnenrd8" alt="" width="100%"
-                  height="100%">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvcs-lj13brwg9u6e0d" alt=""
+                  width="100%" height="100%">
               </div>
-              <h4>Kemeja kami</h4>
-              <p>Rp. 125.000,00</p>
-              <a href="#">Preview</a>
+              <h4>Black White 88 L3405</h4>
+              <p>Rp. 137.000,00</p>
+              <a href="https://shp.ee/qvz02bp" target="_blank">Preview</a>
             </div>
           </div>
         </span>
@@ -323,7 +324,7 @@
             <h3>Info Kontak</h3>
             <div class="info-wrap">
               <p><i class="fa-solid fa-phone"></i> +62 891 2345 6789</p>
-              <p><i class="fa-regular fa-envelope"></i> eightyeight@email.com</p>
+              <p><i class="fa-regular fa-envelope"></i> eightyeight@gmail.com</p>
             </div>
             <form action="https://formsubmit.co/adyaabduazizulhakim@gmail.com" method="POST" class="form">
               <input type="text" name="name" id="nama" placeholder="Masukkan Nama Lengkap Anda" autocomplete="off"
