--- a/index.html
+++ b/index.html
@@ -17,24 +17,22 @@
 
 <body>
   <!-- Navbar Start -->
-  <nav class="navbar" data-aos="fade-down" data-aos-duration="1000">
+  <header class="navbar" data-aos="fade-down" data-aos-duration="1000">
     <div class="navbar-group">
       <a href="#" class="brand">Eighty Eight</a>
-      <div class="navigation">
-        <ul>
-          <li><a href="#home">Utama</a></li>
-          <li><a href="#about">Tentang Kami</a></li>
-          <li><a href="#produk">Produk</a></li>
-          <li><a href="#testimoni">Testimoni</a></li>
-          <li><a href="#kontak">Kontak Kami</a></li>
-        </ul>
-      </div>
+      <nav class="navigation" id="menu-list">
+        <a href="#home">Utama</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#produk">Produk</a>
+        <a href="#testimoni">Testimoni</a>
+        <a href="#kontak">Kontak Kami</a>
+      </nav>
       <a href="#footer" class="download-app">Download App</a>
-      <button type="button" class="burger">
-        <i class="fa-solid fa-bars"></i>
+      <button type="button" class="burger" id="burger">
+        <i class="fa-solid fa-bars menu"></i>
       </button>
     </div>
-  </nav>
+  </header>
   <!-- Navbar end -->
 
   <!-- Home Section Start -->
