--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 required>
               <input type="text" name="email" id="email" placeholder="Masukkan Email Anda" autocomplete="off" required>
               <textarea name="message" id="pesan" cols="30" rows="6" placeholder="Pesan Anda"></textarea>
-              <button type="submit">Kirim Saran</b utton>
+              <button type="submit">Kirim pesan</button>
             </form>
           </div>
         </div>
