Menambahkan Filter Produk dan Bug fixed

--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
             gaya modern
             dan kesempurnaan tradisional.</p>
         </div>
+        <div class="produk-filter">
+          <button class="btn active" onclick="filterObjects('all', this)">All</button>
+          <button class="btn" onclick="filterObjects('black', this)">Black</button>
+          <button class="btn" onclick="filterObjects('white', this)">White</button>
+          <button class="btn" onclick="filterObjects('gray', this)">Gray</button>
+          <button class="btn" onclick="filterObjects('mocca', this)">Mocca</button>
+        </div>
         <div class="produk-content">
           <div class="card">
             <div class="images">
@@ -146,7 +153,7 @@
               <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvfk-ljryv96irfxn14" alt="" width="100%"
                 height="100%">
             </div>
-            <h4>TRCOTTA 88 L3389</h4>
+            <h4>TRCOTTA Mocca 88 L3389</h4>
             <p>Rp. 137.000,00</p>
             <a href="https://shp.ee/26f6kat" target="_blank">Preview</a>
           </div>
@@ -168,9 +175,9 @@
             <p>Rp. 136.000,00</p>
             <a href="https://shp.ee/8ccoegu" target="_blank">Preview</a>
           </div>
-        </div>
-        <span id="hide">
-          <div class="produk-content">
+
+          <span id="hide">
+
             <div class="card">
               <div class="images">
                 <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvfc-ljs9m7tyz9ci76" alt=""
@@ -179,15 +186,6 @@
               <h4>Black Cream 88 L3487</h4>
               <p>Rp. 127.500,00</p>
               <a href="https://shp.ee/di606dv" target="_blank">Preview</a>
-            </div>
-            <div class="card">
-              <div class="images">
-                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvg0-ljqrjsy18knr5c" alt=""
-                  width="100%" height="100%">
-              </div>
-              <h4>BRW SBRW 88 L3465</h4>
-              <p>Rp. 152.000,00</p>
-              <a href="https://shp.ee/96x5fk1" target="_blank">Preview</a>
             </div>
             <div class="card">
               <div class="images">
@@ -207,8 +205,72 @@
               <p>Rp. 137.000,00</p>
               <a href="https://shp.ee/qvz02bp" target="_blank">Preview</a>
             </div>
-          </div>
-        </span>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-22100-d7iuinuapuiv96" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>Black Green Gray 88 L3343</h4>
+              <p>Rp. 132.000,00</p>
+              <a href="https://shp.ee/yovblih" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvcx-liy6lxojlljd08" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>White 88 P4014</h4>
+              <p>Rp. 132.000,00</p>
+              <a href="https://shp.ee/d9t7vxu" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvd1-ljqrxqqwy7sudf" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>Navy Gray Sgry 88 L3418</h4>
+              <p>Rp. 127.000,00</p>
+              <a href="https://shp.ee/lsnphoa" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7rcdt-lrsl5nei9vcxdc" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>TRCTA BLK Mocca 88 L3395</h4>
+              <p>Rp. 137.000,00</p>
+              <a href="https://shp.ee/mwjtx98" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7rcex-lrh7dtkit8389d" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>Gray Black BW 88 L3653</h4>
+              <p>Rp. 127.500,00</p>
+              <a href="https://shp.ee/zw2lqqs" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvey-lit4ist4vtvb4f" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>Soft Gray 88 P4009</h4>
+              <p>Rp. 127.500,00</p>
+              <a href="https://shp.ee/zyp2gc1" target="_blank">Preview</a>
+            </div>
+            <div class="card">
+              <div class="images">
+                <img src="https://down-id.img.susercontent.com/file/sg-11134201-7qvcx-lj2lw66unrwg79" alt=""
+                  width="100%" height="100%">
+              </div>
+              <h4>Mocca 88 P4054</h4>
+              <p>Rp. 137.000,00</p>
+              <a href="https://shp.ee/egye9ao" target="_blank">Preview</a>
+            </div>
+
+          </span>
+        </div>
         <button id="show">
           <p id="text">Tampilkan Lebih Banyak... </p>
           <i class="fa-solid fa-sort-down" id="arrow"></i>
@@ -342,7 +404,7 @@
                 required>
               <input type="text" name="email" id="email" placeholder="Masukkan Email Anda" autocomplete="off" required>
               <textarea name="message" id="pesan" cols="30" rows="6" placeholder="Pesan Anda"></textarea>
-              <button type="submit">Kirim pesan</button>
+              <button type="submit">Kirim Pesan</button>
             </form>
           </div>
         </div>
@@ -422,6 +484,7 @@
   </a>
 
   <!-- Script Aksara Jawa -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
